# Machine_Learning

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
NguyenCongHung/: requirements.txt
data/: README.md
data/sample/: README.md
experiments/: README.md  requirements_experiments.txt
experiments/01_baseline/: config_baseline.yaml  train_baseline.py
experiments/02_sed/: config_sed.yaml  train_sed.py
notebooks/: 01_dataset_analysis.ipynb  02_baseline_experiment.ipynb  03_sed_experiment.ipynb  04_pseudo_labeling_experiment.ipynb  05_teacher_student_experiment.ipynb  06_ensemble_evaluation.ipynb
reports/: README.md  experiment_notes.md  repository_audit.md
scripts/: README.md  _bootstrap.py  evaluate.py  generate_pseudo_labels.py  infer_ensemble.py  make_report_plots.py  prepare_data.py  train_baseline.py  train_sed.py  train_student.py
src/NguyenHoangQuan/: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
src/NguyenHoangQuan/data/: README.md
src/NguyenHoangQuan/experiments/notebooks/: README.md  birdclef.ipynb
src/NguyenHoangQuan/scripts/: evaluate_ensemble.py  infer_audio.py  train_single.py
src/NguyenHoangQuan/src/bioacoustic_sed/: __init__.py  audio.py  losses.py  metrics.py  model.py  openvino_ensemble.py  utils.py
src/NguyenHoangQuan/tests/: test_audio.py  test_ensemble.py
src/NguyenHoangQuan/weights/: README.md
tests/: test_audio.py  test_dataset.py  test_ensemble.py  test_imports.py  test_losses.py  test_metrics.py  test_models.py  test_scripts_exist.py  test_spectrogram.py
weights/: README.md
(+100 files in other folders)
