[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioacoustic-species-recognition"
version = "0.1.0"
description = "Unified research code for BirdCLEF-style multi-label bioacoustic recognition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "librosa>=0.10",
  "soundfile>=0.12",
  "torch>=2.0",
  "torchaudio>=2.0",
  "timm>=0.9",
  "matplotlib>=3.7",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
openvino = ["openvino>=2024.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
