[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bioacoustic-sed-minimal"
version = "0.1.0"
description = "Compact bioacoustic sound event detection ensemble pipeline"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
